Enhanced mobile experience and team images: added mobile-friendly RICA content, increased team member photo size by 20%

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="team-member">
-                        <img src="Images/Tina_kl.jpg" alt="Tina Mucke" class="img-fluid rounded-circle mb-3">
+                        <img src="Images/Tina_kl.jpg" alt="Tina Mucke" class="img-fluid rounded-circle mb-3" style="width: 300px; height: 300px; object-fit: cover;">
                         <h3>Tina Mucke</h3>
                         <p>Meisterfriseurin & Inhaberin</p>
                         <p>Spezialisiert auf Damenhaarschnitte, Farben und Strähnen jeder Art und Naturlocken</p>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="team-member">
-                        <img src="Images/Nils_kl.jpg" alt="Nils Mucke" class="img-fluid rounded-circle mb-3">
+                        <img src="Images/Nils_kl.jpg" alt="Nils Mucke" class="img-fluid rounded-circle mb-3" style="width: 300px; height: 300px; object-fit: cover;">
                         <h3>Nils Mucke</h3>
                         <p>Leidenschaftlicher Friseur & Inhaber</p>
                         <p>Experte für Herrenschnitte und Bartpflege</p>
@@ -206,6 +206,20 @@
                             <h4 class="mb-3" style="color: #85AA99;">Reine Inhaltsstoffe für gesundes Haar</h4>
                             <p class="lead">RICA hat alle unnötigen Inhaltsstoffe aus den Produkten entfernt und transparente Formeln entwickelt, die weder dir noch der Umwelt schaden.</p>
                             <p class="d-none d-md-block">RICA hebt nur das hervor, was wirklich in den Produkten steckt – und zeigt dir offen und selbstbewusst, welche Inhaltsstoffe du darin nicht findest:</p>
+
+                            <!-- Mobile Version - verkürzte Liste -->
+                            <div class="d-md-none">
+                                <p class="mb-2">RICA verzichtet bewusst auf schädliche Inhaltsstoffe wie:</p>
+                                <div style="font-size: 0.9em; line-height: 1.4;">
+                                    <p class="mb-1"><strong>✗</strong> Parabene, Sulfate, Phthalate</p>
+                                    <p class="mb-1"><strong>✗</strong> Mineralöl, Formaldehyd</p>
+                                    <p class="mb-1"><strong>✗</strong> Aluminiumsalze</p>
+                                    <p class="mb-2"><strong>✗</strong> Tierische Öle und Fette</p>
+                                    <p class="text-muted" style="font-size: 0.85em;">...und viele weitere bedenkliche Stoffe</p>
+                                </div>
+                            </div>
+
+                            <!-- Desktop Version - vollständige Liste -->
                             <div class="d-none d-md-block" style="columns: 2; column-gap: 20px; font-size: 0.9em;">
                                 <p style="margin-bottom: 5px;">KEINE Parabene</p>
                                 <p style="margin-bottom: 5px;">KEINE Sulfate: SLS & SLES</p>
