--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="service-card">
-                        <img src="https://images.unsplash.com/photo-1503951914875-452162b0f3f1" alt="Herrenschnitt" class="img-fluid">
+                        <img src="Images/barber.jpg" alt="Herrenschnitt" class="img-fluid">
                         <h3>Herrenschnitte</h3>
                         <p>ab 30€</p>
                     </div>
@@ -184,8 +184,15 @@
                 </div>
                 <div class="col-12 col-md-4 d-flex align-items-start">
                     <!-- Chromoplus Bild rechts -->
-                    <div style="background-color: #f8f9fa; border-radius: 10px; overflow: hidden; width: 100%; display: flex; justify-content: center;">
-                        <img src="Images/chromoplus2.png" alt="Chromoplus Haarfarben" class="img-fluid rounded shadow" style="width: 100%; height: auto; object-fit: contain; max-height: 250px;">
+                    <div style="width: 100%;">
+                        <div style="background-color: #f8f9fa; border-radius: 10px; overflow: hidden; width: 100%; display: flex; justify-content: center; margin-bottom: 15px;">
+                            <img src="Images/chromoplus2.png" alt="Chromoplus Haarfarben" class="img-fluid rounded shadow" style="width: 100%; height: auto; object-fit: contain; max-height: 250px;">
+                        </div>
+                        <div class="text-center">
+                            <a href="RICAProducts.html" class="btn btn-outline-primary py-3 d-inline-block" style="border-color: #9A0708; color: #9A0708; font-size: 1.1em; width: 250px; transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='#9A0708'; this.style.color='white';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#9A0708';">
+                                <i class="bi bi-arrow-right-circle me-2"></i>Mehr zu RICA
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -199,10 +206,9 @@
                                 <!-- Logo Platzhalter -->
                                 <img src="Images/Ricalogo.png" alt="RICA Logo" class="img-fluid" style="max-height: 60px; background-color: #f8f9fa; border: 2px solid black; padding: 8px; border-radius: 8px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                                 <div style="display: none; background-color: #f8f9fa; border: 2px solid black; padding: 15px; border-radius: 8px; color: #9A0708; font-weight: bold; font-size: 0.9em;">
-                                    [RICA LOGO PLATZHALTER]
+
                                 </div>
                             </div>
-                            <h4 class="mb-1" style="color: #85AA99;">RICA Transparenz</h4>
                             <h4 class="mb-3" style="color: #85AA99;">Reine Inhaltsstoffe für gesundes Haar</h4>
                             <p class="lead">RICA hat alle unnötigen Inhaltsstoffe aus den Produkten entfernt und transparente Formeln entwickelt, die weder dir noch der Umwelt schaden.</p>
                             <p class="d-none d-md-block">RICA hebt nur das hervor, was wirklich in den Produkten steckt – und zeigt dir offen und selbstbewusst, welche Inhaltsstoffe du darin nicht findest:</p>
@@ -219,28 +225,38 @@
                                 </div>
                             </div>
 
-                            <!-- Desktop Version - vollständige Liste -->
-                            <div class="d-none d-md-block" style="columns: 2; column-gap: 20px; font-size: 0.9em;">
-                                <p style="margin-bottom: 5px;">KEINE Parabene</p>
-                                <p style="margin-bottom: 5px;">KEINE Sulfate: SLS & SLES</p>
-                                <p style="margin-bottom: 5px;">KEINE Phthalate</p>
-                                <p style="margin-bottom: 5px;">KEIN Mineralöl</p>
-                                <p style="margin-bottom: 5px;">KEIN Formaldehyd</p>
-                                <p style="margin-bottom: 5px;">KEINE Formaldehydabspalter</p>
-                                <p style="margin-bottom: 5px;">KEIN Oxybenzon</p>
-                                <p style="margin-bottom: 5px;">KEIN Steinkohlenteer</p>
-                                <p style="margin-bottom: 5px;">KEIN Hydrochinon</p>
-                                <p style="margin-bottom: 5px;">KEIN Triclosan</p>
-                                <p style="margin-bottom: 5px;">KEIN Triclocarban</p>
-                                <p style="margin-bottom: 5px;">KEIN Ethylacrylat</p>
-                                <p style="margin-bottom: 5px;">KEIN Ethylmethacrylat</p>
-                                <p style="margin-bottom: 5px;">KEIN Methylmethacrylat</p>
-                                <p style="margin-bottom: 5px;">KEIN Butylmethacrylat</p>
-                                <p style="margin-bottom: 5px;">KEIN Hydroxypropylmethacrylat</p>
-                                <p style="margin-bottom: 5px;">KEIN Tetrahydrofurfurylmethacrylat</p>
-                                <p style="margin-bottom: 5px;">KEIN Trimethylolpropantrimethacrylat</p>
-                                <p style="margin-bottom: 5px;">KEINE Aluminiumsalze</p>
-                                <p style="margin-bottom: 5px;">KEINE tierischen Öle, Moschus oder Fette</p>
+                           <div class="card-body p-4">
+                            <h4 class="mb-4 text-center" style="color: #9A0708;">Was Sie NICHT in RICA Produkten finden:</h4>
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <ul class="list-unstyled">
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Parabene</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Sulfate (SLS & SLES)</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Phthalate</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Mineralöl</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Formaldehyd</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Formaldehydabspalter</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Oxybenzon</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Steinkohlenteer</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Hydrochinon</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Triclosan</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-6">
+                                    <ul class="list-unstyled">
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Triclocarban</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Ethylacrylat</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Ethylmethacrylat</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Methylmethacrylat</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Butylmethacrylat</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Hydroxypropylmethacrylat</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Tetrahydrofurfurylmethacrylat</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Trimethylolpropantrimethacrylat</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Aluminiumsalze</li>
+                                        <li class="mb-2"><i class="bi bi-x-circle text-danger me-2"></i>Tierische Öle, Moschus oder Fette</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -250,6 +266,7 @@
     </section>
 
     <!-- Testimonials Section -->
+     <!--
     <section id="testimonials" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Das sagen unsere Kunden</h2>
@@ -275,9 +292,10 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- Contact Section -->
-    <section id="contact" class="py-5 bg-light">
+    <section id="contact" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Kontakt & Öffnungszeiten</h2>
             <div class="row">
