--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="min-height: 80px; background-color: #6B2E2E;">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="Images/Logo_MM.png" alt="MUCKE & MÄHNE Logo" height="40"> MUCKE & MÄHNE</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Leistungen</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#testimonials">Erfahrungen</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Kontakt</a></li>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav align-items-center">
+                    <li class="nav-item me-3">
+                        <a class="navbar-brand d-flex align-items-center" href="#" style="margin: 0; padding: 0;">
+                            <img src="Images/Logo_MM_inverted.png" alt="MUCKE & MÄHNE Logo" height="80">
+                        </a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#home" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#team" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Team</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#services" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Leistungen</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#philosophie" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Philosophie</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#products" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Unsere Produkte</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#contact" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Kontakt</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="RICAProducts.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">RICA Produkte</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="impressum.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Impressum</a></li>
                 </ul>
             </div>
         </div>
@@ -50,7 +57,7 @@
                     <div class="team-member">
                         <img src="Images/Tina_kl.jpg" alt="Tina Mucke" class="img-fluid rounded-circle mb-3" style="width: 300px; height: 300px; object-fit: cover;">
                         <h3>Tina Mucke</h3>
-                        <p>Meisterfriseurin & Inhaberin</p>
+                        <p>Meisterfriseurin</p>
                         <p>Spezialisiert auf Damenhaarschnitte, Farben und Strähnen jeder Art und Naturlocken</p>
                     </div>
                 </div>
@@ -58,8 +65,8 @@
                     <div class="team-member">
                         <img src="Images/Nils_kl.jpg" alt="Nils Mucke" class="img-fluid rounded-circle mb-3" style="width: 300px; height: 300px; object-fit: cover;">
                         <h3>Nils Mucke</h3>
-                        <p>Leidenschaftlicher Friseur & Inhaber</p>
-                        <p>Experte für Herrenschnitte und Bartpflege</p>
+                        <p>Leidenschaftlicher Friseur</p>
+                        <p>Experte für Herrenhaarschnitte und Bartpflege</p>
                     </div>
                 </div>
             </div>
@@ -74,14 +81,14 @@
                 <div class="col-md-4">
                     <div class="service-card">
                         <img src="Images/Damen.png" alt="Damenschnitt" class="img-fluid">
-                        <h3>Damenschnitte</h3>
+                        <h3>Damenhaarschnitte</h3>
                         <p>ab 41€</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-card">
                         <img src="Images/barber.jpg" alt="Herrenschnitt" class="img-fluid">
-                        <h3>Herrenschnitte</h3>
+                        <h3>Herrenhaarschnitte</h3>
                         <p>ab 30€</p>
                     </div>
                 </div>
@@ -128,7 +135,7 @@
                         <div class="card-body">
                             <h4 class="mb-3" style="color: #9A0708;">RICA Haircare</h4>
                             <p class="lead">Bei uns im Salon setzen wir auf Rica Haircare – eine Marke, die für natürliche Pflege, nachhaltige Werte und professionelles Styling steht.</p>
-                            <p>Mit veganen Formeln, ohne belastende Zusätze und mit sanften, hochwertigen Inhaltsstoffen sorgen die Produkte dafür, dass sich dein Haar gesund, glänzend und einfach gut anfühlt.</p>
+                            <p>Mit veganen Formeln, ohne belastende Zusätze und mit sanften, hochwertigen Inhaltsstoffen sorgen die Produkte dafür, dass sich Ihr Haar gesund, glänzend und einfach gut anfühlt.</p>
                         </div>
                     </div>
                 </div>
@@ -159,9 +166,9 @@
                         <div class="card-body">
                             <h4 class="mb-1" style="color: #85AA99;">100 % vegan</h4>
                             <h4 class="mb-3" style="color: #85AA99;">Schönheit aus der Natur</h4>
-                            <p class="lead">Rica's Produktlinie "NATURICA" ist mehr als Kosmetik – sie sind ein Stück mediterranes Lebensgefühl. Mit natürlichen Zutaten aus Sizilien verwöhnen wir dein Haar und schenken ihm neue Kraft und Glanz.</p>
-                            <p>Ob trocken, coloriert oder empfindlich – die sanften Rezepturen passen sich jedem Haar- und Hauttyp an. Reich an mediterranen Wirkstoffen nähren, befeuchten und schützen sie dein Haar und machen es stark und strahlend schön.</p>
-                            <p>Damit deine Haarfarbe ihre Leuchtkraft lange behält, sind alle Produkte farbschonend formuliert – für langanhaltende Schönheit mit gutem Gewissen.</p>
+                            <p class="lead">Rica's Produktlinie "NATURICA" ist mehr als Kosmetik – sie sind ein Stück mediterranes Lebensgefühl. Mit natürlichen Zutaten aus Sizilien verwöhnen wir Ihr Haar und schenken ihm neue Kraft und Glanz.</p>
+                            <p>Ob trocken, coloriert oder empfindlich – die sanften Rezepturen passen sich jedem Haar- und Hauttyp an. Reich an mediterranen Wirkstoffen nähren, befeuchten und schützen sie Ihr Haar und machen es stark und strahlend schön.</p>
+                            <p>Damit Ihre Haarfarbe ihre Leuchtkraft lange behält, sind alle Produkte farbschonend formuliert – für langanhaltende Schönheit mit gutem Gewissen.</p>
                         </div>
                     </div>
                 </div>
@@ -175,10 +182,10 @@
                         <div class="card-body">
                             <h4 class="mb-1" style="color: #9A0708;">Chromoplus</h4>
                             <h4 class="mb-3" style="color: #9A0708;">Strahlende Farben mit gutem Gewissen</h4>
-                            <p class="lead">Mit Ricas's Chromoplus bieten wir dir eine Haarfarbe, die nicht nur wunderschöne Ergebnisse zaubert, sondern auch auf dich und die Natur Rücksicht nimmt. Die Farben sind 100 % vegan, frei von belastenden Stoffen wie Parabenen oder Sulfaten und dermatologisch getestet – für ein angenehmes und sicheres Farberlebnis.</p>
-                            <p>Dank wertvoller Inhaltsstoffe wie Marula-Öl, Quinoa und mediterranen Pflanzenextrakten wird dein Haar während der Coloration gepflegt, geschützt und gestärkt. So bleibt es gesund, glänzend und voller Lebenskraft.</p>
-                            <p class="d-none d-md-block">Ob sanfte Tönung oder intensive Veränderung – mit über 100 Nuancen finden wir gemeinsam den perfekten Farbton, der deine Persönlichkeit unterstreicht. Und das Beste: die Rezeptur schützt deine Haarfarbe, sodass sie lange strahlend schön bleibt.</p>
-                            <p class="d-none d-md-block">Bei uns im Salon bedeutet Coloration nicht nur ein neuer Look – es ist ein Verwöhnmoment für dich und dein Haar.</p>
+                            <p class="lead">Mit Ricas's Chromoplus bieten wir Ihnen eine Haarfarbe, die nicht nur wunderschöne Ergebnisse zaubert, sondern auch auf Sie und die Natur Rücksicht nimmt. Die Farben sind 100 % vegan, frei von belastenden Stoffen wie Parabenen oder Sulfaten und dermatologisch getestet – für ein angenehmes und sicheres Farberlebnis.</p>
+                            <p>Dank wertvoller Inhaltsstoffe wie Marula-Öl, Quinoa und mediterranen Pflanzenextrakten wird Ihr Haar während der Coloration gepflegt, geschützt und gestärkt. So bleibt es gesund, glänzend und voller Lebenskraft.</p>
+                            <p class="d-none d-md-block">Ob sanfte Tönung oder intensive Veränderung – mit über 100 Nuancen finden wir gemeinsam den perfekten Farbton, der Ihre Persönlichkeit unterstreicht. Und das Beste: die Rezeptur schützt Ihre Haarfarbe, sodass sie lange strahlend schön bleibt.</p>
+                            <p class="d-none d-md-block">Bei uns im Salon bedeutet Coloration nicht nur ein neuer Look – es ist ein Verwöhnmoment für Sie und Ihr Haar.</p>
                         </div>
                     </div>
                 </div>
@@ -189,7 +196,7 @@
                             <img src="Images/chromoplus2.png" alt="Chromoplus Haarfarben" class="img-fluid rounded shadow" style="width: 100%; height: auto; object-fit: contain; max-height: 250px;">
                         </div>
                         <div class="text-center">
-                            <a href="RICAProducts.html" class="btn btn-outline-primary py-3 d-inline-block" style="border-color: #9A0708; color: #9A0708; font-size: 1.1em; width: 250px; transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='#9A0708'; this.style.color='white';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#9A0708';">
+                            <a href="RICAProducts.html" class="btn btn-outline-primary btn-lg" style="border-color: #9A0708; color: #9A0708; transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='#9A0708'; this.style.color='white';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#9A0708';">
                                 <i class="bi bi-arrow-right-circle me-2"></i>Mehr zu RICA
                             </a>
                         </div>
@@ -210,8 +217,8 @@
                                 </div>
                             </div>
                             <h4 class="mb-3" style="color: #85AA99;">Reine Inhaltsstoffe für gesundes Haar</h4>
-                            <p class="lead">RICA hat alle unnötigen Inhaltsstoffe aus den Produkten entfernt und transparente Formeln entwickelt, die weder dir noch der Umwelt schaden.</p>
-                            <p class="d-none d-md-block">RICA hebt nur das hervor, was wirklich in den Produkten steckt – und zeigt dir offen und selbstbewusst, welche Inhaltsstoffe du darin nicht findest:</p>
+                            <p class="lead">RICA hat alle unnötigen Inhaltsstoffe aus den Produkten entfernt und transparente Formeln entwickelt, die weder Ihnen noch der Umwelt schaden.</p>
+                            <p class="d-none d-md-block">RICA hebt nur das hervor, was wirklich in den Produkten steckt – und zeigt Ihnen offen und selbstbewusst, welche Inhaltsstoffe Sie darin nicht finden:</p>
 
                             <!-- Mobile Version - verkürzte Liste -->
                             <div class="d-md-none">
@@ -312,7 +319,7 @@
                     <h3 class="mt-4">Terminvereinbarung</h3>
                     <p>
                         <i class="bi bi-whatsapp"></i> WhatsApp: +49 1578 35 027 88<br>
-                        <i class="bi bi-envelope"></i> Email: muckemaehne@gmail.de
+                        <i class="bi bi-envelope"></i> Email: mail@muckeundmaehne.de
                     </p>
                 </div>
                 <div class="col-md-6">
@@ -324,10 +331,25 @@
                     </p>
                     <div class="social-media mt-4">
                         <h3>Social Media</h3>
-                        <a href="#" class="me-3"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="me-3"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="me-3"><i class="bi bi-tiktok"></i></a>
+                        <!-- <a href="#" class="me-3"><i class="bi bi-facebook"></i></a> -->
+                        <a href="https://www.instagram.com/muckemaehne?igsh=MTV6eTIwNnd2d2RreQ==" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
+                        <!-- <a href="#" class="me-3"><i class="bi bi-tiktok"></i></a> -->
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Impressum Link Section -->
+    <section id="impressum" class="py-4 bg-light">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6 text-center">
+                    <h4 class="mb-3">Rechtliche Hinweise</h4>
+                    <p class="mb-4">Für rechtliche Informationen und Datenschutzbestimmungen besuchen Sie unser Impressum.</p>
+                    <a href="impressum.html" class="btn btn-outline-primary btn-lg" style="border-color: #9A0708; color: #9A0708; transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='#9A0708'; this.style.color='white';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#9A0708';">
+                        <i class="bi bi-file-text me-2"></i>Zum Impressum
+                    </a>
                 </div>
             </div>
         </div>
@@ -337,8 +359,6 @@
         <div class="container text-center">
             <p>&copy; 2025 MUCKE & MÄHNE. Alle Rechte vorbehalten.</p>
         </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </footer>    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
