--- a/RICAProducts.html
+++ b/RICAProducts.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="min-height: 80px; background-color: #6B2E2E;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="min-height: 80px; background-color: rgba(107, 46, 46, 0.9);">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
