--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="min-height: 80px; background-color: #6B2E2E;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="min-height: 64px; background-color: rgba(107, 46, 46, 0.9);">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -19,7 +19,7 @@
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item me-3">
                         <a class="navbar-brand d-flex align-items-center" href="#" style="margin: 0; padding: 0;">
-                            <img src="Images/Logo_MM_inverted.png" alt="MUCKE & MÄHNE Logo" height="80">
+                            <img src="Images/Logo_MM_inverted.png" alt="MUCKE & MÄHNE Logo" height="50">
                         </a>
                     </li>
                     <li class="nav-item"><a class="nav-link text-white" href="#home" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Home</a></li>
@@ -331,7 +331,7 @@
                     </p>
                     <div class="social-media mt-4">
                         <h3>Social Media</h3>
-                        <!-- <a href="#" class="me-3"><i class="bi bi-facebook"></i></a> -->
+                        <a href="https://www.facebook.com/share/19xK3t8ZRP/" class="me-3"><i class="bi bi-facebook"></i></a>
                         <a href="https://www.instagram.com/muckemaehne?igsh=MTV6eTIwNnd2d2RreQ==" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
                         <!-- <a href="#" class="me-3"><i class="bi bi-tiktok"></i></a> -->
                     </div>
