--- a/RICAProducts.html
+++ b/RICAProducts.html
@@ -3,7 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RICA Produktwelt - MUCKE & MÄHNE</title>
+    <title>RICA Produktwelt - MUCKE & MÄHNE | Chromoplus, Gorepair, Naturica</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Entdecken Sie die RICA Produktwelt bei MUCKE & MÄHNE. Chromoplus, Gorepair und Naturica für professionelle Haarpflege und Styling. Hochwertige Produkte für jeden Haartyp.">
+    <meta name="keywords" content="RICA Produkte, Chromoplus, Gorepair, Naturica, Haarpflege, Haarprodukte, Friseursalon, professionelle Haarpflege, Haarfarbe, Haarschutz">
+    <meta name="author" content="MUCKE & MÄHNE">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="RICA Produktwelt - MUCKE & MÄHNE">
+    <meta property="og:description" content="Entdecken Sie die RICA Produktwelt: Chromoplus, Gorepair und Naturica für professionelle Haarpflege.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://muckeundmaehne.de/RICAProducts.html">
+    <meta property="og:image" content="https://muckeundmaehne.de/Images/Logo_MM.png">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
@@ -28,7 +42,7 @@
                     <li class="nav-item"><a class="nav-link text-white" href="index.html#philosophie" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Philosophie</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="index.html#products" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Unsere Produkte</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="index.html#contact" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Kontakt</a></li>
-                    <li class="nav-item"><a class="nav-link text-white active" href="RICAProducts.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">RICA Produkte</a></li>
+                    <li class="nav-item"><a class="nav-link text-white active" href="RICAProducts.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">RICA</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="impressum.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Impressum</a></li>
                 </ul>
             </div>
