--- a/impressum.html
+++ b/impressum.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impressum - MUCKE & MÄHNE</title>
+    <title>Impressum - MUCKE & MÄHNE | Rechtliche Informationen</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Impressum und rechtliche Informationen von MUCKE & MÄHNE Friseursalon. Kontaktdaten, Verantwortlicher und rechtliche Hinweise.">
+    <meta name="robots" content="index, follow">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
@@ -28,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link text-white" href="index.html#philosophie" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Philosophie</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="index.html#products" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Unsere Produkte</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="index.html#contact" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Kontakt</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="RICAProducts.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">RICA Produkte</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="RICAProducts.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">RICA</a></li>
                     <li class="nav-item"><a class="nav-link text-white active" href="impressum.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Impressum</a></li>
                 </ul>
             </div>
