--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <h1>Willkommen bei</h1>
             <img src="Images/Logo_MM.png" alt="MUCKE & MÄHNE" class="img-fluid mb-4" style="max-width:60%;">
             <p>Ihr Friseursalon für den perfekten Look</p>
-            <div class="alert alert-info p-3 mb-4 fw-bold text-center" style="background: rgba(255,255,255,0.9); border: 2px solid #9A0708; border-radius: 15px; font-size: 130%; color: #9A0708;">
-                <i class="bi bi-scissors me-2"></i>Wir eröffnen im Januar 2026<i class="bi bi-scissors ms-2"></i>
+            <div class="alert alert-info p-4 mb-3 fw-bold text-center" style="background: rgba(255,255,255,0.9); border: 2px solid #9A0708; border-radius: 15px; font-size: 110%; color: #9A0708; max-width: 400px; margin: 0 auto 1rem auto;">
+                <i class="bi bi-scissors me-2"></i>Wir eröffnen Januar 2026<i class="bi bi-scissors ms-2"></i>
             </div>
             <a href="#contact" class="btn btn-primary" style="background-color: #6B2E2E  !important; border-width: 2px; border-color: #6B2E2E!important; padding: 20px 30px;">Jetzt Termin vereinbaren</a>
         </div>
