--- a/impressum.html
+++ b/impressum.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="min-height: 80px; background-color: rgba(107, 46, 46, 0.9);">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="min-height: 80px; background-color: rgba(137, 135, 108, 0.9);">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -33,9 +33,8 @@
                     <li class="nav-item"><a class="nav-link text-white" href="index.html#services" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Leistungen</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="index.html#philosophie" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Philosophie</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="index.html#products" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Unsere Produkte</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="index.html#contact" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Kontakt</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="index.html#contact" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Kontakt & Anfahrt</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="RICAProducts.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">RICA</a></li>
-                    <li class="nav-item"><a class="nav-link text-white active" href="impressum.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Impressum</a></li>
                 </ul>
             </div>
         </div>
@@ -61,7 +60,7 @@
 
                     <!-- Impressum -->
                     <div class="card p-4 shadow-sm mb-4">
-                        <h4 class="mb-4" style="color: #9A0708;">Impressum</h4>
+                        <h4 class="mb-4" style="color: #6f6e57;">Impressum</h4>
                         <h6>Angaben gemäß § 5 TMG</h6>
                         <address class="mb-3">
                             <strong>Mucke & Mähne</strong><br>
@@ -80,7 +79,7 @@
 
                     <!-- Datenschutz -->
                     <div class="card p-4 shadow-sm">
-                        <h4 class="mb-4" style="color: #9A0708;">Datenschutzerklärung</h4>
+                        <h4 class="mb-4" style="color: #6f6e57;">Datenschutzerklärung</h4>
 
                         <h6>Verantwortliche Stelle</h6>
                         <p class="mb-3">
@@ -102,19 +101,13 @@
                         <p class="mb-3">
                             Sie haben jederzeit das Recht auf Auskunft über Ihre gespeicherten Daten sowie auf Berichtigung, Löschung oder Sperrung. Kontaktieren Sie uns dazu unter den oben angegebenen Kontaktdaten.
                         </p>
-
-                        <div class="alert alert-info">
-                            <small>
-                                <i class="bi bi-info-circle me-2"></i>
-                                Bei Fragen zum Datenschutz kontaktieren Sie uns gerne direkt.
-                            </small>
-                        </div>
+                        <p class="text-muted"><em>Bei Fragen zum Datenschutz kontaktieren Sie uns gerne direkt.</em></p>
                     </div>
 
                     <div class="text-center mt-4">
-                        <a href="index.html" class="btn btn-primary" style="background-color: #6B2E2E !important; border-color: #6B2E2E !important; padding: 12px 24px;">
-                            <i class="bi bi-arrow-left me-2"></i>Zurück zur Hauptseite
-                        </a>
+                            <a href="index.html" class="btn btn-outline-secondary btn-lg w-100" class="btn btn-outline-primary btn-lg" style="border-color: #89876c; color: #89876c; transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='#89876c'; this.style.color='white';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#89876c';">
+                                <i class="bi bi-arrow-left me-2"></i>Zurück zur Hauptseite
+                            </a>
                     </div>
                 </div>
             </div>
