--- a/impressum.html
+++ b/impressum.html
@@ -41,7 +41,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero-small bg-light py-5" style="margin-top: 76px;">
+    <section class="hero-small bg-light py-5" style="margin-top: 60px;">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
@@ -114,8 +114,8 @@
         </div>
     </section>
 
-    <footer class="py-3 bg-dark text-white">
-        <div class="container text-center">
+      <footer class="py-3 text-white" style="background-color: #89876c; border-top: 1px solid #89876c; margin-top: 20px">
+        <div class="container text-center" >
             <p>&copy; 2025 MUCKE & MÄHNE. Alle Rechte vorbehalten.</p>
         </div>
     </footer>
